--- a/.github/workflows/issue-created.yml
+++ b/.github/workflows/issue-created.yml
@@ -7,4 +7,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Notify issue created
-        run: "Issue created."
+        run: echo "Issue created."
